changed weather app designer

--- a/JS - Weather App/assets/css/style.css
+++ b/JS - Weather App/assets/css/style.css
@@ -1,70 +1,89 @@
 body {
   background-image: url(https://thumbs.dreamstime.com/b/renewable-energy-concept-earth-day-environment-protection-hands-protect-forests-grow-ground-help-save-world-167178129.jpg);
+  background-repeat: no-repeat;
 }
 
-#weather-app .container .header-text {
-  font-size: 25px;
+#weather-app .container .card {
+  width: 90%;
+  max-width: 470px;
+  background: linear-gradient(135deg, #00feba, #5b548a);
   color: white;
-  margin-left: 3.5%;
-}
-#weather-app .container .weather {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  margin: 7% auto 0;
+  border-radius: 20px;
+  padding: 40px 35px;
   text-align: center;
 }
-#weather-app .container .weather .day {
-  width: 8%;
-  border: 1px solid #266280;
-  background-color: #266280;
+#weather-app .container .card .search {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#weather-app .container .card .search input {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  color: #555;
+  padding: 10px 25px;
+  height: 50px;
   border-radius: 25px;
+  flex: 1;
+  margin-right: 16px;
+  font-size: 18px;
 }
-#weather-app .container .weather .day .header {
-  color: rgb(197, 193, 193);
+#weather-app .container .card .search button {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  border-radius: 50px;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
 }
-#weather-app .container .weather .day .header h1 {
-  font-size: 40px;
-  line-height: 0px;
-}
-#weather-app .container .weather .day .main p {
-  transform: translate(0px, 250px);
+#weather-app .container .card .search button i {
   font-size: 20px;
 }
-#weather-app .container .weather .day .celcius {
-  color: rgb(197, 193, 193);
-  line-height: 7px;
+#weather-app .container .card .search button:hover {
+  background-color: black;
+  color: white;
 }
-#weather-app .container .weather .day .celcius h1 {
-  font-size: 30px;
+#weather-app .container .card .weather img {
+  width: 170px;
+  margin-top: 1%;
 }
-#weather-app .container .weather .day .celcius p {
-  font-size: 20px;
+#weather-app .container .card .weather .text {
+  line-height: 1px;
 }
-#weather-app .container .weather .w-1 .main {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Cloudy_sky_%2826171935906%29.jpg/1024px-Cloudy_sky_%2826171935906%29.jpg);
-  height: 300px;
+#weather-app .container .card .weather .text h1 {
+  font-size: 80px;
+  font-weight: 500;
 }
-#weather-app .container .weather .w-2 .main {
-  background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
-  height: 300px;
+#weather-app .container .card .weather .text h2 {
+  font-size: 45px;
+  font-weight: 400;
+  margin-top: -10px;
 }
-#weather-app .container .weather .w-3 .main {
-  background-image: url(https://i2-prod.coventrytelegraph.net/incoming/article23459672.ece/ALTERNATES/s615/1_Spring-Sunshine.jpg);
-  height: 300px;
+#weather-app .container .card .weather .details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-top: 50px;
 }
-#weather-app .container .weather .w-4 .main {
-  background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
-  height: 300px;
+#weather-app .container .card .weather .details .col {
+  display: flex;
+  align-items: center;
+  text-align: left;
 }
-#weather-app .container .weather .w-5 .main {
-  background-image: url(https://i2-prod.coventrytelegraph.net/incoming/article23459672.ece/ALTERNATES/s615/1_Spring-Sunshine.jpg);
-  height: 300px;
+#weather-app .container .card .weather .details .col img {
+  width: 40px;
+  margin-right: 10px;
 }
-#weather-app .container .weather .w-6 .main {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Cloudy_sky_%2826171935906%29.jpg/1024px-Cloudy_sky_%2826171935906%29.jpg);
-  height: 300px;
+#weather-app .container .card .weather .details .col div {
+  line-height: 1px;
 }
-#weather-app .container .weather .w-7 .main {
-  background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
-  height: 300px;
+#weather-app .container .card .weather .details .col .humidity,
+#weather-app .container .card .weather .details .col .wind {
+  font-size: 28px;
+  margin-top: -6px;
 }/*# sourceMappingURL=style.css.map */
