--- a/JS - Weather App/style/style.scss
+++ b/JS - Weather App/style/style.scss
@@ -3,97 +3,301 @@
 
 body {
     background-image: url(https://thumbs.dreamstime.com/b/renewable-energy-concept-earth-day-environment-protection-hands-protect-forests-grow-ground-help-save-world-167178129.jpg);
+    background-repeat: no-repeat;
 }
+
+
+// #weather-app {
+
+//     .container {
+
+//         .input {
+//             margin-top: 2%;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+
+//             input {
+//                 font-size: 15px;
+//                 color: variable.$blackColor;
+//                 border-radius: 10px;
+//                 border: none;
+//                 padding: 7px 10px;
+//                 font-size: 20px;
+//             }
+
+//             button {
+//                 padding: 5px 20px;
+//                 height: 34px;
+//                 margin-left: 2%;
+//                 font-size: 17px;
+//                 background-color: variable.$whiteColor;
+//                 color: variable.$blackColor;
+//                 border: none;
+//                 border-radius: 10px;
+//                 cursor: pointer;
+
+//                 &:hover {
+//                     background-color: variable.$blackColor;
+//                     color: variable.$whiteColor;
+//                 }
+//             }
+//         }
+
+//         .weather {
+//             margin-top: 9%;
+//             display: flex;
+//             justify-content: space-around;
+//             align-items: center;
+//             text-align: center;
+
+//             .day {
+//                 width: 8%;
+//                 border: 1px solid variable.$blueColor;
+//                 background-color: variable.$blueColor;
+//                 border-radius: 25px;
+
+
+//                 .header {
+//                     color: variable.$greyColor;
+
+//                     h1 {
+//                         font-size: 40px;
+//                         line-height: 0px;
+//                     }
+//                 }
+
+//                 .main {
+
+//                     p {
+//                         transform: translate(0px, 250px);
+//                         font-size: 20px;
+//                     }
+//                 }
+
+//                 .celcius {
+//                     color: variable.$greyColor;
+//                     line-height: 7px;
+
+//                     h1 {
+//                         font-size: 30px;
+//                     }
+
+//                     p {
+//                         font-size: 20px;
+//                     }
+//                 }
+//             }
+
+//             .w-1 .main {
+//                 background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Cloudy_sky_%2826171935906%29.jpg/1024px-Cloudy_sky_%2826171935906%29.jpg);
+//                 height: 300px;
+//             }
+
+//             .w-2 .main {
+//                 background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
+//                 height: 300px;
+//             }
+
+//             .w-3 .main {
+//                 background-image: url(https://i2-prod.coventrytelegraph.net/incoming/article23459672.ece/ALTERNATES/s615/1_Spring-Sunshine.jpg);
+//                 height: 300px;
+//             }
+
+//             .w-4 .main {
+//                 background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
+//                 height: 300px;
+//             }
+
+//             .w-5 .main {
+//                 background-image: url(https://i2-prod.coventrytelegraph.net/incoming/article23459672.ece/ALTERNATES/s615/1_Spring-Sunshine.jpg);
+//                 height: 300px;
+//             }
+
+//             .w-6 .main {
+//                 background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Cloudy_sky_%2826171935906%29.jpg/1024px-Cloudy_sky_%2826171935906%29.jpg);
+//                 height: 300px;
+//             }
+
+//             .w-7 .main {
+//                 background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
+//                 height: 300px;
+//             }
+
+//         }
+//     }
+// }
+
+
+// ================================================================
+
 
 #weather-app {
 
     .container {
 
-        .header-text {
-            font-size: 25px;
-            color: variable.$whiteColor;
-            margin-left: 3.5%;
-        }
-
-        .weather {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
+        .card {
+            width: 90%;
+            max-width: 470px;
+            background: linear-gradient(135deg, #00feba, #5b548a);
+            color: white;
+            margin: 7% auto 0;
+            border-radius: 20px;
+            padding: 40px 35px;
             text-align: center;
 
-            .day {
-                width: 8%;
-                border: 1px solid variable.$blueColor;
-                background-color: variable.$blueColor;
-                border-radius: 25px;
+            .search {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
 
-
-                .header {
-                    color: variable.$greyColor;
-
-                    h1 {
-                        font-size: 40px;
-                        line-height: 0px;
-                    }
+                input {
+                    border: 0;
+                    outline: 0;
+                    background: #ebfffc;
+                    color: #555;
+                    padding: 10px 25px;
+                    height: 50px;
+                    border-radius: 25px;
+                    flex: 1;
+                    margin-right: 16px;
+                    font-size: 18px;
                 }
 
-                .main {
+                button {
+                    border: 0;
+                    outline: 0;
+                    background: #ebfffc;
+                    border-radius: 50px;
+                    width: 60px;
+                    height: 60px;
+                    cursor: pointer;
 
-                    p {
-                        transform: translate(0px, 250px);
+                    i {
                         font-size: 20px;
                     }
+
+                    &:hover {
+                        background-color: black;
+                        color: white;
+                    }
+                }
+            }
+
+            .weather {
+
+                img {
+                    width: 170px;
+                    margin-top: 1%;
                 }
 
-                .celcius {
-                    color: variable.$greyColor;
-                    line-height: 7px;
+                .text {
+                    line-height: 1px;
 
                     h1 {
-                        font-size: 30px;
+                        font-size: 80px;
+                        font-weight: 500;
                     }
 
-                    p {
-                        font-size: 20px;
+                    h2 {
+                        font-size: 45px;
+                        font-weight: 400;
+                        margin-top: -10px;
+                    }
+                }
+
+                .details {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 0 20px;
+                    margin-top: 50px;
+
+                    .col {
+                        display: flex;
+                        align-items: center;
+                        text-align: left;
+
+                        img {
+                            width: 40px;
+                            margin-right: 10px;
+                        }
+
+                        div {
+                            line-height: 1px;
+                        }
+
+                        .humidity,
+                        .wind {
+                            font-size: 28px;
+                            margin-top: -6px;
+                        }
                     }
                 }
             }
-
-            .w-1 .main {
-                background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Cloudy_sky_%2826171935906%29.jpg/1024px-Cloudy_sky_%2826171935906%29.jpg);
-                height: 300px;
-            }
-
-            .w-2 .main {
-                background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
-                height: 300px;
-            }
-
-            .w-3 .main {
-                background-image: url(https://i2-prod.coventrytelegraph.net/incoming/article23459672.ece/ALTERNATES/s615/1_Spring-Sunshine.jpg);
-                height: 300px;
-            }
-
-            .w-4 .main {
-                background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
-                height: 300px;
-            }
-
-            .w-5 .main {
-                background-image: url(https://i2-prod.coventrytelegraph.net/incoming/article23459672.ece/ALTERNATES/s615/1_Spring-Sunshine.jpg);
-                height: 300px;
-            }
-
-            .w-6 .main {
-                background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Cloudy_sky_%2826171935906%29.jpg/1024px-Cloudy_sky_%2826171935906%29.jpg);
-                height: 300px;
-            }
-
-            .w-7 .main {
-                background-image: url(https://i1.sndcdn.com/artworks-000504621423-1huu3r-t500x500.jpg);
-                height: 300px;
-            }
-
         }
     }
 }
+
+
+// ================================================================
+
+
+
+// body {
+//     background-color: azure;
+//     background-image: url('https://www#heymind#org.uk/wp-content/uploads/2023/05/cirrus_clouds_aspot_AdobeStock.jpg');
+// }
+
+// .heading {
+//     font-size: 50px;
+//     color: white;
+//     text-align: center;
+//     background-color: crimson;
+//     margin-bottom: 20px;
+// }
+
+// .boxes {
+//     background-color: whitesmoke;
+//     width: 200px;
+//     height: 400px;
+//     box-shadow: 4px 7px #999999;
+//     border-radius: 12px;
+//     margin-left: 50px;
+//     margin-top: 40px;
+
+//     .day {
+//         background-color: darkcyan;
+//         width: 200px;
+//         height: 20%;
+//         color: white;
+//         text-align: center;
+//         border-radius: 12px;
+//         font-size: 40px;
+//         padding-top: 15px;
+//     }
+
+//     .temperature {
+//         margin-top: -20px;
+//         text-align: center;
+
+
+//         color: gray;
+//         font-size: 50px;
+//     }
+
+//     .icon {
+//         color: dodgerblue;
+//         font-size: 90px;
+//         margin-left: 40px;
+//         margin-top: -60px;
+//     }
+
+//     .weather {
+//         font-size: 30px;
+//         text-align: center;
+//         color: #999999;
+//         margin-top: -70px;
+//     }
+// }
