--- a/JS - Weather App/assets/css/style.css
+++ b/JS - Weather App/assets/css/style.css
@@ -3,9 +3,14 @@ body {
   background-repeat: no-repeat;
 }
 
+#weather-app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #weather-app .container .card {
   width: 90%;
-  max-width: 470px;
+  max-width: 400px;
   background: linear-gradient(135deg, #00feba, #5b548a);
   color: white;
   margin: 7% auto 0;
@@ -22,8 +27,8 @@ body {
 #weather-app .container .card .search input {
   border: 0;
   outline: 0;
-  background: #ebfffc;
-  color: #555;
+  background: white;
+  color: black;
   padding: 10px 25px;
   height: 50px;
   border-radius: 25px;
@@ -34,7 +39,7 @@ body {
 #weather-app .container .card .search button {
   border: 0;
   outline: 0;
-  background: #ebfffc;
+  background: white;
   border-radius: 50px;
   width: 60px;
   height: 60px;
@@ -47,18 +52,21 @@ body {
   background-color: black;
   color: white;
 }
-#weather-app .container .card .weather img {
+#weather-app .container .card .weather .weather-icon {
   width: 170px;
-  margin-top: 1%;
+  margin-top: 2%;
 }
-#weather-app .container .card .weather .text {
+#weather-app .container .card .weather .city-text,
+#weather-app .container .card .weather .wind-text {
   line-height: 1px;
 }
-#weather-app .container .card .weather .text h1 {
+#weather-app .container .card .weather .city-text h1,
+#weather-app .container .card .weather .wind-text h1 {
   font-size: 80px;
   font-weight: 500;
 }
-#weather-app .container .card .weather .text h2 {
+#weather-app .container .card .weather .city-text h2,
+#weather-app .container .card .weather .wind-text h2 {
   font-size: 45px;
   font-weight: 400;
   margin-top: -10px;
@@ -67,20 +75,22 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
   margin-top: 50px;
 }
 #weather-app .container .card .weather .details .col {
   display: flex;
+  justify-content: center;
   align-items: center;
-  text-align: left;
+  text-align: center;
 }
 #weather-app .container .card .weather .details .col img {
   width: 40px;
   margin-right: 10px;
 }
-#weather-app .container .card .weather .details .col div {
+#weather-app .container .card .weather .details .col .humidity-text,
+#weather-app .container .card .weather .details .col .wind-text {
   line-height: 1px;
+  margin-top: 25%;
 }
 #weather-app .container .card .weather .details .col .humidity,
 #weather-app .container .card .weather .details .col .wind {
